STYLE: .java files stylization