@@ -1,32 +1,28 @@
 package lexer;
 
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import parser.JavaParser;
 import tree.Entity;
 
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+/**
+ * Used to parse source code into a stream of tokens.
+ */
+public class Scanner implements JavaParser.Lexer {
 
-public class Scanner implements JavaParser.Lexer
-{
-    private static String sourcePath;
     private char[] sourceText;
 
     public void read(String src) {
         sourceText = src.toCharArray();
     }
 
-    public boolean readFile(String path)
-    {
-        sourcePath = path;
+    public boolean readFile(String path) {
         try {
-            String text = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
-            text = text.replace("\r\n","\n").replace("\r","n");
+            String text = Files.readString(Paths.get(path));
+            text = text.replace("\r\n", "\n").replace("\r", "n");
             sourceText = text.toCharArray();  //.getChars(StandardCharsets.UTF_8);
             return true;
-        }
-        catch(Exception exc)
-        {
+        } catch (Exception exc) {
             System.err.println(exc.getMessage());
             return false;
         }
@@ -34,47 +30,45 @@ public class Scanner implements JavaParser.Lexer
 
     // Machinery for reading bytes from the source ///////////////////////
 
-    private int currentLine = 0;
-    private int currentPos = 0;
+    private static final char charZero = '\0';
+    // private int currentLine = 0;
+    // private int currentPos = 0;
     private int globalPos = -1;
-    private char currentChar = '\0';
+    private char currentChar = charZero;
 
-    private char getChar()
-    {
-        if ( currentChar == '\0' )
-        {
+    private char getChar() {
+        if (currentChar == charZero) {
             globalPos++;
-            if ( globalPos >= sourceText.length ) return '\0';
+            if (globalPos >= sourceText.length) {
+                return charZero;
+            }
             currentChar = sourceText[globalPos];
         }
         return currentChar;
     }
 
-    private void forgetChar()
-    {
-        currentChar = '\0';
+    private void forgetChar() {
+        currentChar = charZero;
     }
 
     // PUBLIC SCANNER INTERFACE /////////////////////////////
 
     private Token lastToken;
 
-    public int yylex()
-    {
+    public int yylex() {
         lastToken = get();
 
-        if ( Entity.debug )
-        {
+        if (Entity.debug) {
             System.out.print(lastToken.code);
-            if ( lastToken.code == TokenCode.Identifier )
-                System.out.print(" "+lastToken.image);
+            if (lastToken.code == TokenCode.Identifier) {
+                System.out.print(" " + lastToken.image);
+            }
             System.out.println();
         }
         return lastToken.code.value();
     }
 
-    public Token getLVal()
-    {
+    public Token getLVal() {
         return lastToken;
     }
 
@@ -88,16 +82,15 @@ public class Scanner implements JavaParser.Lexer
 
     // Detecting the current token //////////////////////////////
 
+    private static final Token noToken = new Token(TokenCode.DUMMY);
     private Token currentToken;
-    public Token get()
-    {
-//      if ( currentToken == null ) currentToken = getToken();
 
-        while ( true )
-        {
+    public Token get() {
+        // if ( currentToken == null ) currentToken = getToken();
+
+        while (true) {
             currentToken = getToken();
-            switch ( currentToken.code )
-            {
+            switch (currentToken.code) {
                 case ShortComment:
                 case LongComment:
                     continue;
@@ -106,359 +99,550 @@ public class Scanner implements JavaParser.Lexer
             }
         }
     }
-    public void forget()
-    {
-        currentToken = null;
+
+    public void forget() {
+        currentToken = noToken;
     }
 
-    private Token getToken()
-    {
+    private Token getToken() {
         char ch;
         TokenCode code;
         String image;
         Token token;
 
- //     if ( Entity.inBlock && Entity.unAnnotatedTypeTaken )
- //     {
- //         Entity.unAnnotatedTypeTaken = false;
- //         return new Token(TokenCode.Phantom,"");
- //     }
+        // if ( Entity.inBlock && Entity.unAnnotatedTypeTaken )
+        // {
+        //     Entity.unAnnotatedTypeTaken = false;
+        //     return new Token(TokenCode.Phantom,"");
+        // }
 
-        while ( true )
-        {
+        while (true) {
             ch = getChar();
-            if ( ch == '\0' ) { return new Token(TokenCode.EOS,""); }
-            if ( ch == ' '  ) {                currentPos++;   forgetChar(); continue; }
-            if ( ch == '\t' ) {                currentPos++;   forgetChar(); continue; }
-            if ( ch == '\n' ) { currentLine++; currentPos = 0; forgetChar(); continue; }
-            if ( ch == '\r' ) {                currentPos = 0; forgetChar(); continue; }
+            if (ch == charZero) {
+                return new Token(TokenCode.EOS, "");
+            }
+            if (ch == ' ' || ch == '\t') {
+                // currentPos++;
+                forgetChar();
+                continue;
+            }
+            if (ch == '\n') {
+                // currentLine++;
+                // currentPos = 0;
+                forgetChar();
+                continue;
+            }
+            if (ch == '\r') {
+                // currentPos = 0;
+                forgetChar();
+                continue;
+            }
             break;
         }
-        switch ( ch )
-        {
+
+        switch (ch) {
             case '"':  // String literal
                 forgetChar();
-                String str = "";
-                while ( true )
-                {
+                StringBuilder str = new StringBuilder();
+                while (true) {
                     ch = getChar();
-                    if ( ch == '"' )
-                    {
+                    if (ch == '"') {
                         forgetChar();
                         break;
                     }
-                    str += ""+ch;
+                    str.append(ch);
                     forgetChar();
                 }
                 code = TokenCode.StringLiteral;
-                image = str;
+                image = str.toString();
                 break;
-            case ':' :  //  :  ::
-                forgetChar(); ch = getChar();
-                if ( ch == ':' ) { forgetChar(); code = TokenCode.DoubleColon; image = "::"; }
-                else             {               code = TokenCode.Colon; image = ":"; }
+            case ':':  //  :  ::
+                forgetChar();
+                ch = getChar();
+                if (ch == ':') {
+                    forgetChar();
+                    code = TokenCode.DoubleColon;
+                    image = "::";
+                } else {
+                    code = TokenCode.Colon;
+                    image = ":";
+                }
                 break;
 
             case '.':   //  .  ...
-                forgetChar(); ch = getChar();
-                if ( ch == '.')
-                {
-                    forgetChar(); ch = getChar();
-                    if ( ch == '.' ) { forgetChar(); code = TokenCode.Ellipsis; image = "..."; }
-                    else             {               code = TokenCode.ERROR; image ="..";  }
+                forgetChar();
+                ch = getChar();
+                if (ch == '.') {
+                    forgetChar();
+                    ch = getChar();
+                    if (ch == '.') {
+                        forgetChar();
+                        code = TokenCode.Ellipsis;
+                        image = "...";
+                    } else {
+                        code = TokenCode.ERROR;
+                        image = "..";
+                    }
+                } else {
+                    code = TokenCode.Dot;
+                    image = ".";
                 }
-                else                 {               code = TokenCode.Dot; image = "."; }
                 break;
 
             // One-char tokens
-            case '?': forgetChar(); code = TokenCode.Question;     image = "?"; break;
-            case ';': forgetChar(); code = TokenCode.Semicolon;    image = ";"; break;
-            case ',': forgetChar(); code = TokenCode.Comma;        image = ","; break;
-            case '(': forgetChar(); code = TokenCode.LeftParenth;  image = "("; break;
-            case ')': forgetChar(); code = TokenCode.RightParenth; image = ")"; break;
-            case '[': forgetChar(); code = TokenCode.LeftBracket;  image = "["; break;
-            case ']': forgetChar(); code = TokenCode.RightBracket; image = "]"; break;
-            case '{': forgetChar(); code = TokenCode.LeftBrace ;   image = "{"; break;
-            case '}': forgetChar(); code = TokenCode.RightBrace;   image = "}"; break;
-            case '@': forgetChar(); code = TokenCode.At;           image = "@"; break;
-            case '~': forgetChar(); code = TokenCode.Tilde;        image = "~"; break;
-
+            case '?':
+                forgetChar();
+                code = TokenCode.Question;
+                image = "?";
+                break;
+            case ';':
+                forgetChar();
+                code = TokenCode.Semicolon;
+                image = ";";
+                break;
+            case ',':
+                forgetChar();
+                code = TokenCode.Comma;
+                image = ",";
+                break;
+            case '(':
+                forgetChar();
+                code = TokenCode.LeftParenth;
+                image = "(";
+                break;
+            case ')':
+                forgetChar();
+                code = TokenCode.RightParenth;
+                image = ")";
+                break;
+            case '[':
+                forgetChar();
+                code = TokenCode.LeftBracket;
+                image = "[";
+                break;
+            case ']':
+                forgetChar();
+                code = TokenCode.RightBracket;
+                image = "]";
+                break;
+            case '{':
+                forgetChar();
+                code = TokenCode.LeftBrace;
+                image = "{";
+                break;
+            case '}':
+                forgetChar();
+                code = TokenCode.RightBrace;
+                image = "}";
+                break;
+            case '@':
+                forgetChar();
+                code = TokenCode.At;
+                image = "@";
+                break;
+            case '~':
+                forgetChar();
+                code = TokenCode.Tilde;
+                image = "~";
+                break;
             case '*':  //  *  *=
-                forgetChar(); ch = getChar();
-                if ( ch == '=' ) { forgetChar(); code = TokenCode.StarAssign; image = "*="; }
-                else             {               code = TokenCode.Star; image = "*"; }
+                forgetChar();
+                ch = getChar();
+                if (ch == '=') {
+                    forgetChar();
+                    code = TokenCode.StarAssign;
+                    image = "*=";
+                } else {
+                    code = TokenCode.Star;
+                    image = "*";
+                }
                 break;
-
             case '/':  //  /  /=  //  /*
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '=' : forgetChar(); code = TokenCode.SlashAssign;  image = "/="; break;
-                    case '/' : forgetChar(); code = TokenCode.ShortComment; image = "//" + scanShortComment(); break;
-                    case '*' : forgetChar(); code = TokenCode.LongComment;  image = "/*" + scanLongComment(); break;
-                    default  :               code = TokenCode.Slash;        image = "/"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.SlashAssign;
+                        image = "/=";
+                    }
+                    case '/' -> {
+                        forgetChar();
+                        code = TokenCode.ShortComment;
+                        image = "//" + scanShortComment();
+                    }
+                    case '*' -> {
+                        forgetChar();
+                        code = TokenCode.LongComment;
+                        image = "/*" + scanLongComment();
+                    }
+                    default -> {
+                        code = TokenCode.Slash;
+                        image = "/";
+                    }
                 }
                 break;
-
             case '%':  //  %  %=
-                forgetChar(); ch = getChar();
-                if ( ch == '=' ) { forgetChar(); code = TokenCode.PercentAssign; image = "%="; }
-                else             {               code = TokenCode.Percent;       image = "%"; }
+                forgetChar();
+                ch = getChar();
+                if (ch == '=') {
+                    forgetChar();
+                    code = TokenCode.PercentAssign;
+                    image = "%=";
+                } else {
+                    code = TokenCode.Percent;
+                    image = "%";
+                }
                 break;
-
             case '+':  //  +  +=  ++
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '+': forgetChar(); code = TokenCode.PlusPlus; image = "++"; break;
-                    case '=': forgetChar(); code = TokenCode.PlusAssign; image = "+="; break;
-                    default:                code = TokenCode.Plus; image = "+"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '+' -> {
+                        forgetChar();
+                        code = TokenCode.PlusPlus;
+                        image = "++";
+                    }
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.PlusAssign;
+                        image = "+=";
+                    }
+                    default -> {
+                        code = TokenCode.Plus;
+                        image = "+";
+                    }
                 }
                 break;
-
             case '-':  //  -  -=  --  ->
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '=': forgetChar(); code = TokenCode.MinusAssign; image = "-="; break;
-                    case '-': forgetChar(); code = TokenCode.MinusMinus; image = "--"; break;
-                    case '>': forgetChar(); code = TokenCode.Arrow; image = "->"; break;
-                    default:                code = TokenCode.Minus; image = "-"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.MinusAssign;
+                        image = "-=";
+                    }
+                    case '-' -> {
+                        forgetChar();
+                        code = TokenCode.MinusMinus;
+                        image = "--";
+                    }
+                    case '>' -> {
+                        forgetChar();
+                        code = TokenCode.Arrow;
+                        image = "->";
+                    }
+                    default -> {
+                        code = TokenCode.Minus;
+                        image = "-";
+                    }
                 }
                 break;
-
             case '=':  //  =  ==  ===
-                forgetChar(); ch = getChar();
-                if ( ch == '=' ) {
-                    forgetChar(); ch = getChar();
-                    if ( ch == '=' ) { forgetChar(); code = TokenCode.EqualDeep; image = "==="; }
-                    else             {               code = TokenCode.Equal; image = "=="; }
+                forgetChar();
+                ch = getChar();
+                if (ch == '=') {
+                    forgetChar();
+                    ch = getChar();
+                    if (ch == '=') {
+                        forgetChar();
+                        code = TokenCode.EqualDeep;
+                        image = "===";
+                    } else {
+                        code = TokenCode.Equal;
+                        image = "==";
+                    }
+                } else {
+                    code = TokenCode.Assign;
+                    image = "=";
                 }
-                else { code = TokenCode.Assign; image = "="; }
                 break;
-
             case '<':  //  <  <=  <<  <<=
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '<':
-                        forgetChar(); ch = getChar();
-                        if ( ch == '=' ) { forgetChar(); code = TokenCode.LeftShiftAssign; image = "<<="; }
-                        else             {               code = TokenCode.LeftShift; image = "<<"; }
-                        break;
-                    case '=':
-                        forgetChar(); code = TokenCode.LessEqual; image = "<="; break;
-                    default:          code = TokenCode.Less; image = "<"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '<' -> {
+                        forgetChar();
+                        ch = getChar();
+                        if (ch == '=') {
+                            forgetChar();
+                            code = TokenCode.LeftShiftAssign;
+                            image = "<<=";
+                        } else {
+                            code = TokenCode.LeftShift;
+                            image = "<<";
+                        }
+                    }
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.LessEqual;
+                        image = "<=";
+                    }
+                    default -> {
+                        code = TokenCode.Less;
+                        image = "<";
+                    }
                 }
                 break;
-
             case '>':  //  >  >=  >>  >>=  >>>  >>>=
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '=': forgetChar(); code = TokenCode.GreaterEqual; image = ">="; break;
-                    case '>' :
-                        forgetChar(); ch = getChar();
-                        switch ( ch ) {
-                            case '>':
-                                forgetChar(); ch = getChar();
-                                if ( ch == '=' ) { forgetChar(); code = TokenCode.ArithmRightShiftAssign; image = ">>>="; }
-                                else             {               code = TokenCode.ArithmRightShift; image = ">>>"; }
-                                break;
-                            case '=':
-                                forgetChar(); code = TokenCode.RightShiftAssign; image = ">>=";  break;
-                            default:          code = TokenCode.RightShift; image = ">>"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.GreaterEqual;
+                        image = ">=";
+                    }
+                    case '>' -> {
+                        forgetChar();
+                        ch = getChar();
+                        switch (ch) {
+                            case '>' -> {
+                                forgetChar();
+                                ch = getChar();
+                                if (ch == '=') {
+                                    forgetChar();
+                                    code = TokenCode.ArithmRightShiftAssign;
+                                    image = ">>>=";
+                                } else {
+                                    code = TokenCode.ArithmRightShift;
+                                    image = ">>>";
+                                }
+                            }
+                            case '=' -> {
+                                forgetChar();
+                                code = TokenCode.RightShiftAssign;
+                                image = ">>=";
+                            }
+                            default -> {
+                                code = TokenCode.RightShift;
+                                image = ">>";
+                            }
                         }
-                        break;
-                    default:
-                        code = TokenCode.Greater; image = ">"; break;
+                    }
+                    default -> {
+                        code = TokenCode.Greater;
+                        image = ">";
+                    }
                 }
                 break;
 
             case '|':  //  |  ||  |=
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '|': forgetChar(); code = TokenCode.DoubleVertical; image = "||"; break;
-                    case '=': forgetChar(); code = TokenCode.VerticalAssign; image = "|="; break;
-                    default:                code = TokenCode.Vertical; image = "|"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '|' -> {
+                        forgetChar();
+                        code = TokenCode.DoubleVertical;
+                        image = "||";
+                    }
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.VerticalAssign;
+                        image = "|=";
+                    }
+                    default -> {
+                        code = TokenCode.Vertical;
+                        image = "|";
+                    }
                 }
                 break;
 
             case '&':  //  &  &&  &=
-                forgetChar(); ch = getChar();
-                switch ( ch ) {
-                    case '&': forgetChar(); code = TokenCode.DoubleAmpersand; image = "&&"; break;
-                    case '=': forgetChar(); code = TokenCode.AmpersandAssign; image = "&="; break;
-                    default:                code = TokenCode.Ampersand; image = "&"; break;
+                forgetChar();
+                ch = getChar();
+                switch (ch) {
+                    case '&' -> {
+                        forgetChar();
+                        code = TokenCode.DoubleAmpersand;
+                        image = "&&";
+                    }
+                    case '=' -> {
+                        forgetChar();
+                        code = TokenCode.AmpersandAssign;
+                        image = "&=";
+                    }
+                    default -> {
+                        code = TokenCode.Ampersand;
+                        image = "&";
+                    }
+                }
+                break;
+            case '^':  //  ^  ^=
+                forgetChar();
+                ch = getChar();
+                if (ch == '=') {
+                    forgetChar();
+                    code = TokenCode.CaretAssign;
+                    image = "^=";
+                } else {
+                    code = TokenCode.Caret;
+                    image = "^";
+                }
+                break;
+            case '!':  //  !  !=
+                forgetChar();
+                ch = getChar();
+                if (ch == '=') {
+                    forgetChar();
+                    code = TokenCode.NonEqual;
+                    image = "!=";
+                } else {
+                    code = TokenCode.Negation;
+                    image = "!";
                 }
                 break;
 
-            case '^':  //  ^  ^=
-                forgetChar(); ch = getChar();
-                if ( ch == '=' ) { forgetChar(); code = TokenCode.CaretAssign; image = "^="; }
-                else             {               code = TokenCode.Caret; image = "^"; }
-                break;
-
-            case '!':  //  !  !=
-                forgetChar(); ch = getChar();
-                if ( ch == '=' ) { forgetChar(); code = TokenCode.NonEqual; image = "!="; }
-                else             {               code = TokenCode.Negation; image = "!"; }
-                break;
-
             default:
-                if ( Character.isJavaIdentifierStart(ch) )
-                {
+                if (Character.isJavaIdentifierStart(ch)) {
                     String identifier = "" + ch;
-                    while ( true )
-                    {
-                        forgetChar(); ch = getChar();
-                        if ( Character.isJavaIdentifierPart(ch) )
+                    while (true) {
+                        forgetChar();
+                        ch = getChar();
+                        if (Character.isJavaIdentifierPart(ch)) {
                             identifier += ch;
-                        else  {
+                        } else {
                             // forgetChar();
                             break;
                         }
                     }
                     image = identifier;
                     code = detectKeyword(identifier);
-                }
-                else if ( Character.isDigit(ch) )
-                {
+                } else if (Character.isDigit(ch)) {
                     String literal = "" + ch;
-                    while ( true )
-                    {
-                        forgetChar(); ch = getChar();
-                        if ( Character.isDigit(ch) )
-                            literal = literal.concat(""+ch);
-                        else {
-                        //  forgetChar();
+                    while (true) {
+                        forgetChar();
+                        ch = getChar();
+                        if (Character.isDigit(ch)) {
+                            literal = literal.concat("" + ch);
+                        } else {
+                            // forgetChar();
                             break;
                         }
                     }
                     ch = getChar();
-                    if ( ch == '.' )
-                    {
+                    if (ch == '.') {
                         literal = literal.concat(".");
-                        forgetChar(); ch = getChar();
-                        while ( true )
-                        {
-                            if ( Character.isDigit(ch) )
-                                literal = literal.concat(""+ch);
-                            else {
-                                forgetChar(); break;
+                        forgetChar();
+                        ch = getChar();
+                        while (true) {
+                            if (Character.isDigit(ch)) {
+                                literal = literal.concat("" + ch);
+                            } else {
+                                forgetChar();
+                                break;
                             }
                         }
                         code = TokenCode.FloatingLiteral;
-                    }
-                    else
+                    } else {
                         code = TokenCode.IntegerLiteral;
+                    }
                     image = literal;
-                }
-                else {
+                } else {
                     code = TokenCode.ERROR;
                     image = "" + ch;
                 }
                 break;
         }
-        token = new Token(code,image);
+        token = new Token(code, image);
         return token;
     }
 
-    private String scanShortComment()
-    {
-        String comment = "";
-        while ( true )
-        {
+    private String scanShortComment() {
+        StringBuilder comment = new StringBuilder();
+        while (true) {
             char ch = getChar();
             forgetChar();
-            if ( ch == '\n' ) break;
-            comment += ch;
+            if (ch == '\n') {
+                break;
+            }
+            comment.append(ch);
         }
-        return comment;
+        return comment.toString();
     }
 
-    private String scanLongComment()
-    {
-        String comment = "";
-        while (true )
-        {
+    private String scanLongComment() {
+        StringBuilder comment = new StringBuilder();
+        while (true) {
             char ch = getChar();
             forgetChar();
-            if ( ch == '*' )
-            {
+            if (ch == '*') {
                 forgetChar();
                 ch = getChar();
-                if ( ch == '/' )
-                {
+                if (ch == '/') {
                     forgetChar();
                     break;
+                } else {
+                    comment.append("*").append(ch);
                 }
-                else
-                    comment += "*" + ch;
+            } else {
+                comment.append(ch);
             }
-            else
-                comment += ch;
         }
-        return comment;
+        return comment.toString();
     }
 
-    private TokenCode detectKeyword(String identifier)
-    {
-        switch ( identifier ) {
-            case "abstract" : return TokenCode.Abstract;
-            case "assert"   : return TokenCode.Assert;
-            case "boolean"  : return TokenCode.Boolean;
-            case "break"    : return TokenCode.Break;
-            case "byte"     : return TokenCode.Byte;
-            case "catch"    : return TokenCode.Catch;
-            case "case"     : return TokenCode.Case;
-            case "char"     : return TokenCode.Char;
-            case "class"    : return TokenCode.Class;
- //         case "const"    : return TokenCode.Const;   // not actually used
-            case "continue" : return TokenCode.Continue;
-            case "default"  : return TokenCode.Default;
-            case "do"       : return TokenCode.Do;
-            case "double"   : return TokenCode.Double;
-            case "else"     : return TokenCode.Else;
-            case "enum"     : return TokenCode.Enum;
-            case "extends"  : return TokenCode.Extends;
-            case "final"    : return TokenCode.Final;
-            case "finally"  : return TokenCode.Finally;
-            case "float"    : return TokenCode.Float;
-            case "for"      : return TokenCode.For;
- //         case "goto"     : return TokenCode.Goto; // not actually used
-            case "if"       : return TokenCode.If;
-            case "implements": return TokenCode.Implements;
-            case "import"   : return TokenCode.Import;
-            case "instanceof": return TokenCode.Instanceof;
-            case "int"      : return TokenCode.Int;
-            case "interface": return TokenCode.Interface;
-            case "long"     : return TokenCode.Long;
-            case "native"   : return TokenCode.Native;
-            case "new"      : return TokenCode.New;
-            case "package"  : return TokenCode.Package;
-            case "private"  : return TokenCode.Private;
-            case "protected": return TokenCode.Protected;
-            case "public"   : return TokenCode.Public;
-            case "return"   : return TokenCode.Return;
-            case "short"    : return TokenCode.Short;
-            case "static"   : return TokenCode.Static;
-            case "strictfp" : return TokenCode.Strictfp;
-            case "super"    : return TokenCode.Super;
-            case "synchronized": return TokenCode.Synchronized;
-            case "switch"   : return TokenCode.Switch;
-            case "this"     : return TokenCode.This;
-            case "throw"    : return TokenCode.Throw;
-            case "throws"   : return TokenCode.Throws;
-            case "transient": return TokenCode.Transient;
-            case "try"      : return TokenCode.Try;
-            case "void"     : return TokenCode.Void;
-            case "volatile" : return TokenCode.Volatile;
-            case "while"    : return TokenCode.While;
+    private TokenCode detectKeyword(String identifier) {
+        return switch (identifier) {
+            case "abstract" -> TokenCode.Abstract;
+            case "assert" -> TokenCode.Assert;
+            case "boolean" -> TokenCode.Boolean;
+            case "break" -> TokenCode.Break;
+            case "byte" -> TokenCode.Byte;
+            case "catch" -> TokenCode.Catch;
+            case "case" -> TokenCode.Case;
+            case "char" -> TokenCode.Char;
+            case "class" -> TokenCode.Class;
+            //         case "const"    : return TokenCode.Const;   // not actually used
+            case "continue" -> TokenCode.Continue;
+            case "default" -> TokenCode.Default;
+            case "do" -> TokenCode.Do;
+            case "double" -> TokenCode.Double;
+            case "else" -> TokenCode.Else;
+            case "enum" -> TokenCode.Enum;
+            case "extends" -> TokenCode.Extends;
+            case "final" -> TokenCode.Final;
+            case "finally" -> TokenCode.Finally;
+            case "float" -> TokenCode.Float;
+            case "for" -> TokenCode.For;
+            //         case "goto"     : return TokenCode.Goto; // not actually used
+            case "if" -> TokenCode.If;
+            case "implements" -> TokenCode.Implements;
+            case "import" -> TokenCode.Import;
+            case "instanceof" -> TokenCode.Instanceof;
+            case "int" -> TokenCode.Int;
+            case "interface" -> TokenCode.Interface;
+            case "long" -> TokenCode.Long;
+            case "native" -> TokenCode.Native;
+            case "new" -> TokenCode.New;
+            case "package" -> TokenCode.Package;
+            case "private" -> TokenCode.Private;
+            case "protected" -> TokenCode.Protected;
+            case "public" -> TokenCode.Public;
+            case "return" -> TokenCode.Return;
+            case "short" -> TokenCode.Short;
+            case "static" -> TokenCode.Static;
+            case "strictfp" -> TokenCode.Strictfp;
+            case "super" -> TokenCode.Super;
+            case "synchronized" -> TokenCode.Synchronized;
+            case "switch" -> TokenCode.Switch;
+            case "this" -> TokenCode.This;
+            case "throw" -> TokenCode.Throw;
+            case "throws" -> TokenCode.Throws;
+            case "transient" -> TokenCode.Transient;
+            case "try" -> TokenCode.Try;
+            case "void" -> TokenCode.Void;
+            case "volatile" -> TokenCode.Volatile;
+            case "while" -> TokenCode.While;
+            case "true" -> TokenCode.True;
+            case "false" -> TokenCode.False;
+            case "null" -> TokenCode.Null;
+            case "var" -> TokenCode.Var;
+            case "yield" -> TokenCode.Yield;
+            case "record" -> TokenCode.Record;
 
-            case "true"     : return TokenCode.True;
-            case "false"    : return TokenCode.False;
-            case "null"     : return TokenCode.Null;
-            case "var"      : return TokenCode.Var;
-            case "yield"    : return TokenCode.Yield;
-            case "record"   : return TokenCode.Record;
-
-           /*
+            /*
                     open,
                     module,
                     requires,
@@ -474,7 +658,7 @@ public class Scanner implements JavaParser.Lexer
                     Record,
             */
 
-            default: return TokenCode.Identifier;
-        }
+            default -> TokenCode.Identifier;
+        };
     }
 }
